--- a/Tela-Promocao/tela.html
+++ b/Tela-Promocao/tela.html
@@ -6,50 +6,61 @@
 </head>
 
 <body>
-    <div>
-        <div>
-            <h1 class="titulo">Você quer descontos exclusivos?</h1>
-        </div>
+    <div class="principal">
+        <h1 class="titulo">Você quer descontos exclusivos?</h1>
+        <hr class="hr">
         <div class="texto">
-            <p>Neste mês teremos ofertas exclusivas para clientes cadastrados!</p>
-            <p>Por onde podemos te avisar?</p>
             <br />
+            <p class="p1">Neste mês teremos ofertas exclusivas para clientes cadastrados!</p>
+            <p class="p1">Por onde podemos te avisar?</p><br>
         </div>
-        <div>
-            <ul class="promo-methods">
-                <li class="promo-method email">
-                    <input name="promo_methods" type="radio" id="email">
-                    <label for="email">E-mail</label>
-                </li>
-                <li class="promo-method sms">
-                    <input name="promo_methods" type="radio" id="sms">
-                    <label for="sms">SMS</label>
-                </li>
-                <li class="promo-method watts">
-                    <input name="promo_methods" type="radio" id="watts">
-                    <label for="watts">WattsApp</label>
-                </li>
+
+        <div class="promo-methods">
+            <div class="promo-method email">
+                <input name="promo_methods" type="radio" class="radio" id="email">
+                <label for="email"></label>
+                <h5>E-MAIL</h5>
+            </div>
+            <div class="promo-method sms">
+                <input name="promo_methods" type="radio" class="radio" id="sms">
+                <label for="sms"></label>
+                <h5>SMS</h5>
+            </div>
+            <div class="promo-method watts">
+                <input name="promo_methods" type="radio" class="radio" id="watts">
+                <label for="watts"></label>
+                <h5>WATSAPP</h5>
+            </div>
             </ul>
             <br />
         </div>
         <br />
         <div class="texto2">
             <br />
-            <br />
-            <br />
             <p>
+                <hr class="dotted">
+
                 Confirme seus dados abaixo :
             </p>
         </div>
-        <br />
-        <div>
-            <input type="email" name="txtEmail" placeholder="Digite seu email" class="mail-address">
+        <div class="input">
+            <input type="text" name="txtEmail" placeholder="Digite seu email" class="mail-address">
+            <br />
+            <br />
             <input type="text" name="numCel" placeholder="Digite seu número de celular" class="celular">
-            <button class="button">Confirmar</button>
         </div>
-        <div class="termos">
-            </br>
-            <input type="checkbox"> Li e aceito os <a href="termosdeuso.html">termos de uso</a>.
+        <div class="botao">
+            <div>
+                <button class="button">CONFIRMAR</button>
+            </div>
+        </div>
+        <div class="termos2">
+            <label class="checkboxcontainer"><a class="termos">Li e aceito os</a> <a href="termosdeuso.html"
+                    class="link1">termos de
+                    uso</a>.
+                <input type="checkbox">
+                <span class="checkmark"></span>
+            </label>
         </div>
     </div>
 </body>
