alt em páginas para ficarem como modelo dropbox (tela2) e potter (tela)

--- a/Tela-Promo-2/tela2.html
+++ b/Tela-Promo-2/tela2.html
@@ -10,11 +10,10 @@
         <h1 class="titulo">Você quer descontos exclusivos?</h1>
         <hr class="hr">
         <div class="texto">
-            <br />
             <p class="p1">Neste mês teremos ofertas exclusivas para clientes cadastrados!</p>
-            <p class="p1">Por onde podemos te avisar?</p><br>
+            <p class="p1">Por onde podemos te avisar?</p>
+            <br>
         </div>
-
         <div class="promo-methods">
             <div class="promo-method email">
                 <input name="promo_methods" type="radio" class="radio" id="email">
@@ -32,37 +31,30 @@
                 <h5>WATSAPP</h5>
             </div>
             </ul>
-            <br />
         </div>
-        <br />
         <div class="texto2">
-            <br />
-            <p>
-                <hr class="dotted">
-
+            <hr class="dotted">
+            <p class="texto">
                 Confirme seus dados abaixo :
             </p>
         </div>
         <div class="input">
             <input type="text" name="txtEmail" placeholder="Digite seu email" class="mail-address">
-            <br />
-            <br />
             <input type="text" name="numCel" placeholder="Digite seu número de celular" class="celular">
             <div class="termos2">
-                <label class="checkboxcontainer"><a class="termos">Li e aceito os</a> <a href="termosdeuso.html"
-                        class="link1">termos de
+                <label class="checkboxcontainer">Li e aceito os <a href="termosdeuso.html" class="link1">termos de
                         uso</a>.
                     <input type="checkbox">
                     <span class="checkmark"></span>
                 </label>
             </div>
-
-            <div class="botao">
-                <div>
-                    <button class="button">CONFIRMAR</button>
-                </div>
+        </div>
+        <div class="botao">
+            <div>
+                <button class="button">CONFIRMAR</button>
             </div>
         </div>
+    </div>
 
 </body>
 
