inserção da parte dos termos de uso com comentário

--- a/Tela-Promocao/tela.html
+++ b/Tela-Promocao/tela.html
@@ -3,6 +3,7 @@
 
 <head>
     <link href="estilo.css" rel="stylesheet" type="text/css">
+    <!--<script type="text/javascript" src="function.js"></script>-->
 </head>
 
 <body>
