--- a/Tela-Promocao/MobileScreen.html
+++ b/Tela-Promocao/MobileScreen.html
@@ -4,6 +4,7 @@
 <head>
     <link href="estiloMobile.css" rel="stylesheet" type="text/css">
     <!--<script type="text/javascript" src="function.js"></script>-->
+    <!-- chamada de Jquery na página -->
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script>
         $(document).ready(function () {
@@ -41,7 +42,7 @@
 
 <body>
     <!-- sempre tem que ter uma div pai e uma div abaixo do pai que também não seja a div da modal pra colocar essas funções-->
-    <div class="principal" id="id-pai"> 
+    <div class="principal" id="id-pai">
         <div id="conteudo-modal" style="display: block">
             <h1 class="titulo">Você quer descontos exclusivos?</h1>
             <hr class="hr">
